Fixing the dark mode for footer

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -176,3 +176,8 @@ body.dark-mode .mine .message:after {
 body.dark-mode .sender-info {
     color: #616567;
 }
+
+body.dark-mode footer {
+    background-color: #1c1c1c;
+    color: #e0e0e0;
+}
